# Nullix

./: README.md  pyproject.toml
nullix/: __init__.py  cache.py  converters.py  data_structures.py  math_utils.py  string_utils.py  validators.py
productivity/: README.md  pyproject.toml
productivity/productivity/: __init__.py  analytics.py  blocker.py  categorizer.py  cli.py  config.py  demo.py  focus.py  models.py  service.py  storage.py  timeutil.py  tracker.py  window_provider.py
productivity/productivity/web/: __init__.py  app.py
productivity/productivity/web/static/: app.js  style.css
productivity/productivity/web/templates/: dashboard.html
productivity/tests/: test_analytics.py  test_blocker.py  test_categorizer.py  test_cli.py  test_config.py  test_coverage_extra.py  test_demo_and_service.py  test_focus.py  test_models.py  test_storage.py  test_timeutil.py  test_tracker.py  test_web.py  test_window_provider.py
tests/: test_cache.py  test_converters.py  test_data_structures.py  test_math_utils.py  test_string_utils.py  test_validators.py
website/: package-lock.json  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/components/: Background.tsx  Cursor.tsx  Navbar.tsx  Preloader.tsx  Reveal.tsx  ThemeProvider.tsx  icons.tsx
website/src/components/sections/: About.tsx  Contact.tsx  Focus.tsx  Hero.tsx  Philosophy.tsx  Projects.tsx  Timeline.tsx  Vision.tsx
